<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivDetailEventCover"
            android:contentDescription="@string/event_title"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvDetailEventTitle"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvDetailEventTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ivDetailEventCover"
            app:layout_constraintStart_toStartOf="@id/ivDetailEventCover"
            app:layout_constraintEnd_toEndOf="@id/ivDetailEventCover"
            app:layout_constraintBottom_toTopOf="@id/tv_owner"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="@string/event_title"/>
        <TextView
            android:id="@+id/tv_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_group"
            app:layout_constraintStart_toStartOf="@id/ivDetailEventCover"
            app:layout_constraintEnd_toEndOf="@id/ivDetailEventCover"
            app:layout_constraintTop_toBottomOf="@id/tvDetailEventTitle"
            app:layout_constraintBottom_toTopOf="@id/tv_begin_time"
            tools:text="@string/owner_event" />

        <TextView
            android:id="@+id/tv_begin_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_time_black"
            android:drawablePadding="4dp"
            app:layout_constraintStart_toStartOf="@id/ivDetailEventCover"
            app:layout_constraintEnd_toEndOf="@id/ivDetailEventCover"
            app:layout_constraintTop_toBottomOf="@id/tv_owner"
            app:layout_constraintBottom_toTopOf="@id/tv_quota"
            tools:text="@string/begin_time_event" />

        <TextView
            android:id="@+id/tv_quota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/ivDetailEventCover"
            app:layout_constraintEnd_toEndOf="@id/ivDetailEventCover"
            app:layout_constraintTop_toBottomOf="@id/tv_begin_time"
            app:layout_constraintBottom_toTopOf="@id/tv_description_title"
            tools:text="@string/quota_event" />

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/ivDetailEventCover"
            app:layout_constraintEnd_toEndOf="@id/ivDetailEventCover"
            app:layout_constraintTop_toBottomOf="@id/tv_quota"
            app:layout_constraintBottom_toTopOf="@id/tv_description_event"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/tv_description_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/ivDetailEventCover"
            app:layout_constraintEnd_toEndOf="@id/ivDetailEventCover"
            app:layout_constraintTop_toBottomOf="@id/tv_description_title"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            tools:text="@string/description"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_favorite"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/register"
            tools:ignore="VisualLintButtonSize" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_register"
            app:layout_constraintStart_toEndOf="@id/btn_register"
            app:layout_constraintEnd_toEndOf="@id/ivDetailEventCover"
            app:tint="#ff0000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
